; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_different_name.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_different_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_entry*, %struct.cache_entry*)* @different_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @different_name(%struct.cache_entry* %0, %struct.cache_entry* %1) #0 {
  %3 = alloca %struct.cache_entry*, align 8
  %4 = alloca %struct.cache_entry*, align 8
  %5 = alloca i32, align 4
  store %struct.cache_entry* %0, %struct.cache_entry** %3, align 8
  store %struct.cache_entry* %1, %struct.cache_entry** %4, align 8
  %6 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %7 = call i32 @ce_namelen(%struct.cache_entry* %6)
  store i32 %7, i32* %5, align 4
  %8 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %9 = call i32 @ce_namelen(%struct.cache_entry* %8)
  %10 = load i32, i32* %5, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %22, label %12

12:                                               ; preds = %2
  %13 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %14 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %17 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i64 @memcmp(i32 %15, i32 %18, i32 %19)
  %21 = icmp ne i64 %20, 0
  br label %22

22:                                               ; preds = %12, %2
  %23 = phi i1 [ true, %2 ], [ %21, %12 ]
  %24 = zext i1 %23 to i32
  ret i32 %24
}

declare dso_local i32 @ce_namelen(%struct.cache_entry*) #1

declare dso_local i64 @memcmp(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
